--- a/daily-checker/views/email.handlebars
+++ b/daily-checker/views/email.handlebars
@@ -8,6 +8,7 @@
 <body>
   <h2>Hello, hope you are doing well in the future </h2>
   <p> {{ msg }} </p>
+  <p> {{ moodLine }} </p>
   {{ footer }}
 </body>
 </html>
