--- a/client/styles/MoodPicker.module.css
+++ b/client/styles/MoodPicker.module.css
@@ -1,3 +1,6 @@
+.container {
+    max-width: 350px;
+}
 .moodDesc {
     text-align: center;
     margin-bottom: 10px;
@@ -18,4 +21,5 @@
     /* margin-left: 20px; */
     cursor: pointer;
     transition: all .2s ease-in-out;
+    max-width: 35px;
 }
