edit cron job to run every day at 12am & 8pm and some other edits

--- a/daily-checker/views/email.handlebars
+++ b/daily-checker/views/email.handlebars
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>A letter from your old version</title>
+  <title>A letter from your old self</title>
 </head>
 <body>
-  <h2>Hello, hope you are doing well in the future </h2>
+  <h3>Hello, hope you are doing well in the future.</h3>
   <p> {{ msg }} </p>
-  <p> {{ moodLine }} </p>
+
   {{ footer }}
 </body>
 </html>
