--- a/client/styles/MoodPicker.module.css
+++ b/client/styles/MoodPicker.module.css
@@ -7,7 +7,7 @@
     font-weight: 700;
     font-size: 20px;
     font-family:'Times New Roman', Times, serif;
-    color: chocolate;
+    color: #ff6a00;
     transition: all 0.5s ease-in-out;
 }
 .iconsContainer {
